--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "bcrypt": "^6.0.0",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "socket.io": "^4.7.5"
-  }
+  "bcryptjs": "^2.4.3",
+  "cors": "^2.8.5",
+  "dotenv": "^16.0.3",
+  "express": "^4.18.2",
+  "jsonwebtoken": "^9.0.0",
+  "socket.io": "^4.7.2"
+}
 }
